--- a/samples/coco/custom_image_run.ipynb
+++ b/samples/coco/custom_image_run.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import random\n",
+    "import random11\n",
     "import math\n",
     "import re\n",
     "import time\n",
